--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-query": "^3.23.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reducer": "^0.19.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
